Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31341

Windows: QFileSystemWatcher does not allow to watch files/folders with special characters

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.1
    • 4.8.4, 5.1.0 Beta 1
    • None
    • Windows 7
    • 6e8dddadd877ec8e9a8f6006e7beaa183d5da452

    Description

      QFileSystemWatcher does not allow to watch folders with special characters:

      QFileSystemWatcher w;
      dPath ("D:/Projekte/UAS/ğüişöçĞÜİLIÖÇ2");

      Warning message:
      "QFileSystemWatcher: failed to add paths: D:/Projekte/UAS/g?is??G?ILI??2".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes